--- a/src/Components/StudentDashBoard/StudentPoll/SubmitPoll/SubmitPoll.css
+++ b/src/Components/StudentDashBoard/StudentPoll/SubmitPoll/SubmitPoll.css
@@ -12,3 +12,10 @@
     margin: 75px;
     border-radius: 15px;
 }
+
+.student-wrap{
+    width: 100%;
+    display: inline-block;
+    word-wrap: break-word ;
+    white-space: pre-wrap !important;
+}
